Add multi dimensional interfaces